{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Main",
            "id": "fa60ea8b-7a95-4378-b54e-0430c5350f0c",
            "actions": [
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "dfe6057a-d782-4f4a-8dc2-4bc660810c00",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "dd214fc6-5e13-4425-a974-7c00bd7bb364",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7198bd1d-aec4-4e5a-b734-d0ffb396f369",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Main",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01ee2736-738a-4e8b-8c5b-d1b6b099cffe",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Main",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Main",
            "bindingGroup": "Main",
            "devices": []
        }
    ]
}